# microstatus

./: .env_template  .gitignore  Cargo.toml  LICENSE  README.md  demo.yaml
.github/workflows/: build.yml
example_files/: apline_rc-service_conf  nginx.conf
src/: cli.rs  lib.rs  main.rs  server.rs  web.rs
templates/: history.html  index.html
