[package]
name = "microstatus"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
chrono = "0.4.42"
clap = "4.5.51"
dotenvy = "0.15.7"
ping = "0.7"
rand = "0.9.2"
rayon = "1.11.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] } 
yaml-rust2 = "0.10.4"
